redesign without use flex

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h3><span>N.O.</span>U.R</h3>
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="#about">Abput</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <button>Contact Me</button>
@@ -82,7 +82,7 @@
       <footer class="footer">
         <div class="footer_content">
           <p>&copy; 2024 <span>Nour AlSalhi. </span> All rights reserved.</p>
-          <ul class="socials">
+          <ul class="socials" style="position: sticky;">
             <li><a href="#">Facebook</a></li>
             <li><a href="#">Twitter</a></li>
             <li><a href="#">LinkedIn</a></li>
